Some menus have been reorganized. All the 2D loaded are listed in the toolbar and organized according to the file they are from. Added an experimental color mode applying a gradient color along each branch. Added a slider to set the details level. This level is applied to the current branch displayed or the elements selected. The mouse click selection is faster since restricted to the branch and single-strands drawn. Added a maven task to run the tool (mvn exec:exec)